# wapp-signal-relay

./: .gitignore  .travis.yml  Pipfile  README.md  README.rst  requirements.txt  settings.py  setup.cfg  setup.py  tox.ini
examples/: examples.py
src/wapp_signal_relay/: checks.py  config.py  credential_handling.py  io_handling.py  loggermodule.py  main.py  main.py.OLD
src/wapp_signal_relay/logutils/: logger.py
