[metadata]
name = wapp-signal-relay
version = 0.0.0
license = GPLv3
description = Relays Whatsapp messages to Signal for specified groups and/or contacts.
long_description = file: README.rst
author = Joost Bergen
url = https://github.com/jrbergen/wapp-signal-relay
classifiers=
    Programming Language :: Python :: 3
    Development Status :: 1 - Planning

;[options]
;packages = find:
;package_dir =
;    =src
;include_package_data = True
;install_requires =
;   <requirement 1>
;   <requirement 2>
;   <...>
;   <requirement n>
;
;[options.packages.find]
;where=src